Fixed mobile spacing stacking.

--- a/docroot/themes/custom/uids_base/scss/components/grid.scss
+++ b/docroot/themes/custom/uids_base/scss/components/grid.scss
@@ -81,6 +81,11 @@
   .list-container__inner {
     align-items: start;
     @include grid-base;
+    .content {
+      > div + div {
+        margin-top: 2rem;
+      }
+    }
     @include breakpoint(sm) {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -94,9 +99,6 @@
       .content {
         grid-area: 2/2/6/5;
         min-width: 0;
-        > div + div {
-          margin-top: 1.6rem;
-        }
       }
     }
     @include breakpoint(page-container) {
